# MultithreadCalculator

./: CMakeLists.txt  README.md  core.cpp  core.h  lib.cpp  lib.h  main.cpp  main.qml  multithreadCalc.pro  threadsafequeue.cpp  threadsafequeue.h  untitled5.pro
mLib/: mLib.pro  mLib_global.h  mlib.cpp  mlib.h  operationsEnum.h
mathLibBuild/: Makefile  Makefile.Debug  Makefile.Release
mathLibBuild/release/: moc_operationsEnum.cpp
